--- a/client/index.html
+++ b/client/index.html
@@ -2,12 +2,30 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <meta
+      name="description"
+      content="A single page application for tracking habits... fractally"
+    />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1"
+    />
+    <title>Habit Fract</title>
+    <script src="https://unpkg.com/@popperjs/core@2"></script>
+    <script src="https://unpkg.com/tippy.js@6"></script>
+    <script
+      src="https://kit.fontawesome.com/a4be68252b.js"
+      data-search-pseudo-elements
+      crossorigin="anonymous"
+    ></script>
+    <!-- Flash message library from https://betaweb.github.io/flashjs/ -->
   </head>
   <body>
-    <div id="root"></div>
+    <div
+      id="app"
+      class="bg-gray-50 flex flex-col items-center m-0 overflow-x-hidden"
+    ></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
