--- a/client/index.html
+++ b/client/index.html
@@ -22,10 +22,7 @@
     <!-- Flash message library from https://betaweb.github.io/flashjs/ -->
   </head>
   <body>
-    <div
-      id="app"
-      class="bg-gray-50 flex flex-col items-center m-0 overflow-x-hidden"
-    ></div>
+    <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
