--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,10 @@
     <!-- Flash message library from https://betaweb.github.io/flashjs/ -->
   </head>
   <body>
-    <div id="root"></div>
+    <div
+      id="app"
+      className="bg-gray-50 flex flex-col items-center m-0 overflow-x-hidden"
+    ></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
