--- a/client/index.html
+++ b/client/index.html
@@ -24,7 +24,7 @@
   <body>
     <div
       id="app"
-      className="bg-gray-50 flex flex-col items-center m-0 overflow-x-hidden"
+      className="bg-gray-50 flex flex-col items-center m-0 overflow-hidden"
     ></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
