--- a/client/index.html
+++ b/client/index.html
@@ -12,12 +12,13 @@
       content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1"
     />
     <title>Habit Fract</title>
-    <script src="https://unpkg.com/@popperjs/core@2"></script>
-    <script src="https://unpkg.com/tippy.js@6"></script>
+    <script src="https://unpkg.com/@popperjs/core@2" type="module"></script>
+    <script src="https://unpkg.com/tippy.js@6" type="module"></script>
     <script
       src="https://kit.fontawesome.com/a4be68252b.js"
       data-search-pseudo-elements
       crossorigin="anonymous"
+      type="module"
     ></script>
     <!-- Flash message library from https://betaweb.github.io/flashjs/ -->
   </head>
