Move bundle.css

--- a/client/index.html
+++ b/client/index.html
@@ -20,7 +20,7 @@
       crossorigin="anonymous"
       type="module"
     ></script>
-    <link rel="stylesheet" href="/assets/bundle.css" />
+    <link rel="stylesheet" href="bundle.css" />
     <!-- Flash message library from https://betaweb.github.io/flashjs/ -->
   </head>
   <body>
