--- a/client/index.html
+++ b/client/index.html
@@ -20,6 +20,7 @@
       crossorigin="anonymous"
       type="module"
     ></script>
+    <link rel="stylesheet" type="module" href="src/styles/bundled-styles.css" />
     <!-- Flash message library from https://betaweb.github.io/flashjs/ -->
   </head>
   <body>
