--- a/client/index.html
+++ b/client/index.html
@@ -21,6 +21,8 @@
       type="module"
     ></script>
     <!-- Flash message library from https://betaweb.github.io/flashjs/ -->
+
+    <link rel="stylesheet" href="./bundle.css" />
   </head>
   <body>
     <div
