--- a/client/index.html
+++ b/client/index.html
@@ -23,6 +23,7 @@
     <!-- Flash message library from https://betaweb.github.io/flashjs/ -->
 
     <link rel="stylesheet" href="./bundle.css" />
+    <link rel="stylesheet" href="src/styles/bundled-styles.css" />
   </head>
   <body>
     <div
