--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
     ></script>
     <!-- Flash message library from https://betaweb.github.io/flashjs/ -->
 
-    <link rel="stylesheet" href="./bundle.css" />
+    <link rel="stylesheet" href="./styles/bundle.css" />
   </head>
   <body>
     <div
